iniciando testes com api

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "apisauce": "^0.15.1",
     "create-react-native-app": "^1.0.0",
     "expo": "^27.0.1",
     "react": "16.3.1",
