--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -25,6 +25,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "react-navigation": "^2.1.0"
+    "react-native-tab-view": "^1.0.2",
+    "react-navigation": "^2.2.0"
   }
 }
